--- a/portafolio_react/src/index.css
+++ b/portafolio_react/src/index.css
@@ -1,68 +1,174 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --bg-primary: #070d06;
+  --bg-secondary:#1c2f1a;
+  --bg-accent:#091807;
+  --bg-muted: #243b21;
+  --foreground: #f8f9f8;
+  --muted-foreground: #869285;
+  --border-primary: #243b21;
+  --border-secondary: #101530;
+  --primary: #52c234;
+  --primary-accent:#03a003;
+  --gradient-1:linear-gradient(to right, var(--primary) 0%, var(--primary-accent) 100%);
+  --gradient-2:linear-gradient(to right, var(--primary) 0%, #e1e3e1 100%);
+  --gradient-3:linear-gradient(190deg,var(--primary) 0%,rgba(18, 82, 78,.5) 100%);
+  --destructive: #7f1d1d;
+  --warning:#ffa500;
+  --transition:all 400ms ease;
+  --glow: radial-gradient(rgb(82, 194, 52,0.1) 0%, rgba(7, 13, 6,0.5));
 }
 
-a {
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  text-decoration:none;
+  border: 0;
+  outline:0;
+}
+
+html,body{
+  color:var(--foreground);
+  min-height: var(--bg-primary);
+  background: var(--bg-primary);
+  font-family: "Poppins", sans-serif;
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary) transparent;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+body{
+  max-width: 1800px;
+  margin: auto;
+}
+
+p{
+  font-size:15 px;
+  line-height:20px;
+}
+
+a{
+  color: var(--foreground);
+  text-decoration: none;
+}
+
+h1,h2,h3,h4,h5,h6{
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+img{
+  width: 100%;
+  min-height:100%;
+  object-fit: cover;
+  display: block;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.heading-1{
+  font-size: 60px;
+  font-weight:700;
+  line-height: 65px;
+  margin: 20px 0;
+  text-align:center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.sub-title{
+  font-size: 20px;
+  text-align:center;
+}
+
+.gradient-text{
+  background: var(--gradient-2);
+  -webkit-text-fill-color:transparent;
+  -webkit-background-clip:text;
+  background-clip: text;
+}
+
+.primary{
+  color:var(--primary)
+}
+
+.muted{
+  color: var(--muted-foreground);
+}
+.wrapper{
+  width:100%;
+  max-width: 1150px;
+  margin:auto;
+  padding: 70px 20px
+}
+
+.section-header{
+  margin:auto;
+  max-width: 800px;
+}
+
+.flex{
+display: flex;
+align-items:center;
+justify-content: center;
+gap:10px;
+}
+
+.icon-wrapper{
+  width: 2.7rem;
+  height: 2.7rem;
+  min-width: 2.7rem;
+  min-height: 2.7rem;
+  max-width: 2.7rem;
+  max-height: 2.7rem;
+  background: var(--bg-muted);
+  font-size: 20px;
+  border-radius: 100%;
+  color: var(--muted-foreground);
+  transition: var(--transition);
+}
+
+.icon-wrapper:hover{
+  background: var(--bg-acent);
+  color: var(--foreground);
+  transform: scale(1.1);
+}
+
+.btn{
+  padding: 10px 20px;
+  background: var(--bg-secondary);
+  border: 1px solid var(--border-primary);
+  color: var(--foreground);
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.btn.primary{
+  background: var(--gradient-1);
+  border: none;
+}
+
+/* Responsive Code */
+@media (max-width:900px){
+  .wrapper{
+    padding: 40px 20px;
   }
-  a:hover {
-    color: #747bff;
+
+  .heading-1{
+    font-size:45px;
+    line-height: 50px;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .sub-title{
+    font-size: 18px;
   }
 }
+
+@media (max-width:600px){
+  .heading-1{
+    font-size:25px;
+    line-height: 30px;
+  }
+  sub-title{
+    font-size: 14px;
+  }
+}
+
